@@ -24,6 +24,9 @@
   DateTime.new! method. Make RubyCoreSupport.datetime_new! fallback to
   DateTime.jd instead. Thanks to Aaron Patterson for reporting the removal of
   the new! method (issue #29233).
+* Allow the default value of the local_to_utc and period_for_local dst 
+  parameter to be specified globally with a Timezone.default_dst attribute.
+  Thanks to Kurt Werle for the suggestion and patch.
 
 
 == Version 0.3.12 (tzdata v2008i) - 12-Nov-2008
